--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.0.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
